chore(user): remove credit card num and national id fields
These two fields are now handles by "/user/creditCard/submit" route
